--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
-name: WakaTime status update
-
 on:
+  push:
+        branches: [ main ]
   schedule:
-        # Runs at 12 am  '0 0 * * *'  UTC
-        - cron: "1 0 * * *"
-
+        - cron: '1 0 * * *'
 jobs:
   update-readme:
         name: Update the WakaTime Stat
@@ -20,6 +18,6 @@ jobs:
                   # Automatic github token
                   GITHUB_TOKEN: ${{ github.token }}
                   # Branch - newer GitHub repositories have "main" as default branch, change to main in that case, default is master
-                  BRANCH: "master"
+                  BRANCH: "main"
                   # Manual Commit messages - write your own messages here
                   COMMIT_MSG: "Automated Coding Activity Update :alien:"
